add producing difference between automatons